feat: add elite and boss enemies with rare rewards

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         </button>
       </div>
     </div>
+    <div id="rare-reward-overlay">
+      <h2>レア報酬ゲット！</h2>
+      <p id="rare-reward-desc"></p>
+      <button id="rare-reward-continue">OK</button>
+    </div>
     <div id="event-overlay">
       <h2 id="event-title" data-i18n="event.title"></h2>
       <p id="event-message"></p>
