use local matter.js with fallback message

--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
     </ul>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+  <script src="lib/matter.min.js"></script>
+  <script>
+    if (!window.Matter) {
+      document.body.insertAdjacentHTML('beforeend', '<p>Matter.js の読み込みに失敗しました。</p>');
+    }
+  </script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
