Add mini-map overlay

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="container">
+    <div id="mini-map"></div>
     <div id="menu-overlay">
       <div id="main-menu">
         <h1 id="game-title" data-i18n="menu.title"></h1>
