Add version entry for fourth character

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
   <div id="version-history">
     <h3 data-i18n="history.title"></h3>
     <ul>
+      <li data-i18n="history.v1_5"></li>
       <li data-i18n="history.v1_4"></li>
       <li data-i18n="history.v1_3"></li>
       <li data-i18n="history.v1_2"></li>
