feat: add new icon credits while keeping existing ones

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
     </div>
     <div id="credit-overlay">
       <p>Bomb icon by Freepik - Flaticon</p>
+      <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by popo2021 - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/heart" title="heart icons">Heart icons created by Fathema Khanom - Flaticon</a></p>
       <p><a href="https://www.flaticon.com/free-icons/resurgence" title="resurgence icons">Resurgence icons created by Uniconlabs - Flaticon</a></p>
       <p><a href="https://www.flaticon.com/free-icons/boost" title="boost icons">Boost icons created by Freepik - Flaticon</a></p>
       <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by kliwir art - Flaticon</a></p>
