--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div id="rare-reward-overlay">
       <h2>レア報酬ゲット！</h2>
-      <div id="rare-reward-icon"></div>
+      <img id="rare-reward-icon" alt="rare icon" />
       <p id="rare-reward-desc"></p>
       <button id="rare-reward-continue">OK</button>
     </div>
