--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
       <div id="ammo-text"><span data-i18n="hud.ammo"></span><span id="ammo-value" class="ammo-value"></span></div>
       <div id="coin-counter"><img id="coin-icon" src="image/items/coin.png" alt="coin"><span id="coin-value">0</span></div>
+      <div id="relic-container"></div>
     </div>
     <div id="game-wrapper">
       <div id="mini-map"></div>
