--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </div>
     </div>
     <div id="rare-reward-overlay">
-      <h2>レア報酬ゲット！</h2>
+      <h2 data-i18n="rareReward.title"></h2>
       <img id="rare-reward-icon" alt="rare icon" />
       <p id="rare-reward-desc"></p>
-      <button id="rare-reward-continue">OK</button>
+      <button id="rare-reward-continue" data-i18n="rareReward.continue"></button>
     </div>
     <div id="event-overlay">
       <h2 id="event-title" data-i18n="event.title"></h2>
@@ -105,7 +105,7 @@
       <button id="xp-continue-button" data-i18n="xp.continue"></button>
     </div>
     <div id="game-over-overlay">
-      <h2>gameover😭</h2>
+      <h2 data-i18n="gameOver.title"></h2>
       <button id="game-over-retry-button" data-i18n="gameOver.retry"></button>
     </div>
     <div id="reload-overlay" data-i18n="reload.text"></div>
