--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   <div id="version-history">
     <h3 data-i18n="history.title"></h3>
     <ul>
+      <li data-i18n="history.v1_6"></li>
       <li data-i18n="history.v1_5"></li>
       <li data-i18n="history.v1_4"></li>
       <li data-i18n="history.v1_3"></li>
