--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <ul></ul>
   </div>
 
-  <script src="libs/matter.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
   <script>
     function showError(message) {
       document.body.classList.remove('hidden');
