Add game clear overlay

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
       <h2 data-i18n="gameOver.title"></h2>
       <button id="game-over-retry-button" data-i18n="gameOver.retry"></button>
     </div>
+    <div id="game-clear-overlay">
+      <h2 data-i18n="gameClear.title"></h2>
+      <button id="game-clear-menu" data-i18n="gameClear.menu"></button>
+    </div>
     <div id="reload-overlay" data-i18n="reload.text"></div>
     <div id="settings-overlay">
       <h2 id="settings-title" data-i18n="settings.title"></h2>
