Add pause and speed controls

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       <div id="ammo-text"><span data-i18n="hud.ammo"></span><span id="ammo-value" class="ammo-value"></span></div>
       <div id="coin-counter"><img id="coin-icon" src="image/items/coin.png" alt="coin"><span id="coin-value">0</span></div>
       <div id="relic-container"></div>
+      <div id="hud-controls">
+        <button id="pause-button" data-i18n="hud.pause"></button>
+        <label for="speed-select" data-i18n="hud.speed"></label>
+        <select id="speed-select">
+          <option value="1" data-i18n="hud.speed1"></option>
+          <option value="2" data-i18n="hud.speed2"></option>
+        </select>
+      </div>
     </div>
     <div id="game-wrapper">
       <div id="mini-map"></div>
