feat: add skill tree with persistent skills

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 id="game-title" data-i18n="menu.title"></h1>
         <button id="start-button" class="menu-option" data-i18n="menu.start"></button>
         <button id="upgrade-menu-button" class="menu-option" data-i18n="menu.upgrade"></button>
+        <button id="skill-tree-button" class="menu-option" data-i18n="menu.skills"></button>
         <button id="reset-progress" class="menu-option" data-i18n="menu.reset"></button>
         <button id="settings-button" class="menu-option" data-i18n="menu.settings"></button>
       </div>
@@ -24,6 +25,12 @@
         <button id="upgrade-hp" data-i18n="upgrade.hp"></button>
         <button id="upgrade-atk" data-i18n="upgrade.atk"></button>
         <button id="upgrade-back" data-i18n="upgrade.back"></button>
+      </div>
+      <div id="skill-tree">
+        <h2 data-i18n="skillTree.title"></h2>
+        <div id="skill-xp-display"><span data-i18n="upgrade.xp"></span><span id="skill-xp-value">0</span></div>
+        <div id="skill-list"></div>
+        <button id="skill-tree-back" data-i18n="skillTree.back"></button>
       </div>
       <button id="credit-button" data-i18n="menu.credit"></button>
     </div>
