Add gallery overlay and menu entry

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="start-button" class="menu-option" data-i18n="menu.start"></button>
         <button id="upgrade-menu-button" class="menu-option" data-i18n="menu.upgrade"></button>
         <button id="skill-tree-button" class="menu-option" data-i18n="menu.skills"></button>
+        <button id="gallery-button" class="menu-option" data-i18n="menu.gallery"></button>
         <button id="reset-progress" class="menu-option" data-i18n="menu.reset"></button>
         <button id="settings-button" class="menu-option" data-i18n="menu.settings"></button>
       </div>
@@ -151,6 +152,14 @@
       <p><a href="https://www.flaticon.com/free-icons/pet" title="pet icons">Pet icons created by Ylivdesign - Flaticon</a></p>
       <p><a href="https://www.flaticon.com/free-icons/bamboo" title="bamboo icons">Bamboo icons created by Victoruler - Flaticon</a></p>
       <button id="credit-close" data-i18n="credit.close"></button>
+    </div>
+    <div id="gallery-overlay">
+      <div id="gallery-controls">
+        <button id="gallery-prev"></button>
+        <img id="gallery-image" src="" alt="gallery">
+        <button id="gallery-next"></button>
+      </div>
+      <button id="gallery-close"></button>
     </div>
   </div>
 
