feat: add gallery translations

--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@
       <button id="credit-close" data-i18n="credit.close"></button>
     </div>
     <div id="gallery-overlay">
+      <h2 id="gallery-title" data-i18n="gallery.title"></h2>
       <div id="gallery-controls">
-        <button id="gallery-prev"></button>
+        <button id="gallery-prev" data-i18n="gallery.prev"></button>
         <img id="gallery-image" src="" alt="gallery">
-        <button id="gallery-next"></button>
+        <button id="gallery-next" data-i18n="gallery.next"></button>
       </div>
-      <button id="gallery-close"></button>
+      <button id="gallery-close" data-i18n="gallery.close"></button>
     </div>
   </div>
 
